--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://alex1151212.github.io/deploy-test/",
+  "homepage": "https://alex1151212.github.io/ntut-110-1-mid/",
   "devDependencies": {
     "sass": "^1.56.0"
   }
